{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 203,
  "lineage": "923650af-31ee-d2b4-85af-7a592747ffb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f184a8d96828fb15",
            "domain": "vpc",
            "id": "eipalloc-0f184a8d96828fb15",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-222-215.compute-1.amazonaws.com",
            "public_ip": "44.221.222.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:internet-gateway/igw-0efbbf273090dfeea",
            "id": "igw-0efbbf273090dfeea",
            "owner_id": "063762586807",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f184a8d96828fb15",
            "association_id": "eipassoc-037b308dae11c151b",
            "connectivity_type": "public",
            "id": "nat-019e3f21946c444fa",
            "network_interface_id": "eni-0d06429f6bfb93cce",
            "private_ip": "192.168.0.10",
            "public_ip": "44.221.222.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8f6ee9557856368"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b742f6324f5cc4031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019e3f21946c444fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b742f6324f5cc403",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0efbbf273090dfeea",
            "id": "r-rtb-08c974edb6f2ddfc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c974edb6f2ddfc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:route-table/rtb-0b742f6324f5cc403",
            "id": "rtb-0b742f6324f5cc403",
            "owner_id": "063762586807",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:route-table/rtb-08c974edb6f2ddfc3",
            "id": "rtb-08c974edb6f2ddfc3",
            "owner_id": "063762586807",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ae8aa060984b3c",
            "route_table_id": "rtb-0b742f6324f5cc403",
            "subnet_id": "subnet-0b76ed350c65c9619"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d0ae274254a5cb",
            "route_table_id": "rtb-0b742f6324f5cc403",
            "subnet_id": "subnet-0298318a1aec8fb6a"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025ea4f305fc00322",
            "route_table_id": "rtb-0b742f6324f5cc403",
            "subnet_id": "subnet-0aa8d01130f8a1203"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c66fbf3c1343d7bd",
            "route_table_id": "rtb-0b742f6324f5cc403",
            "subnet_id": "subnet-0410930b642f7ea31"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d486b940fdde8bff",
            "route_table_id": "rtb-08c974edb6f2ddfc3",
            "subnet_id": "subnet-0f8f6ee9557856368"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02965436278ccce01",
            "route_table_id": "rtb-08c974edb6f2ddfc3",
            "subnet_id": "subnet-0d9868ed66e694f2f"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0b76ed350c65c9619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b76ed350c65c9619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0298318a1aec8fb6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0298318a1aec8fb6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0aa8d01130f8a1203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa8d01130f8a1203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0410930b642f7ea31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0410930b642f7ea31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.0.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0f8f6ee9557856368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8f6ee9557856368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "192.168.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:subnet/subnet-0d9868ed66e694f2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9868ed66e694f2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "063762586807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0801354ec951964cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063762586807:vpc/vpc-0801354ec951964cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d3a018b3841d3531",
            "default_route_table_id": "rtb-09c1cd63f9c40d0c5",
            "default_security_group_id": "sg-0aee3a8b62e421581",
            "dhcp_options_id": "dopt-033b77d76e1689696",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0801354ec951964cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c1cd63f9c40d0c5",
            "owner_id": "063762586807"
          }
        }
      ]
    }
  ]
}